<resources>
    <string name="app_name">NativeChickenAndDuck</string>
    <string name="welcome">Welcome to NCAD Information System</string>
    <string name="body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean semper velit quis turpis mollis ultrices. Ut eget libero elit.</string>
    <string name="learn">Learn More</string>
    <string name="join">Join Us</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title">Native Chicken and Itik Pinas Information System</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="dashboard">Dashboard</string>
    <string name="account">Account</string>
    <string name="address">Address</string>
    <string name="contacts">Contacts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="farm_id">Farm ID</string>
    <string name="breed">Breed</string>
    <string name="region">Region</string>
    <string name="province">Province</string>
    <string name="town">Town</string>
    <string name="baranggay">Baranggay</string>
    <string name="submit">Submit</string>
    <string name="phone">Phone</string>
    <string name="upload">Upload</string>
    <string name="add_pen">Add Pen</string>
    <string name="brooder">Brooder</string>
    <string name="grower">Grower</string>
    <string name="layer">Layer</string>
    <string name="add_generation">Add Generation</string>
    <string name="egg_production">Egg Production</string>
    <string name="feeding_records">Feeding Records</string>

    <string-array name="generations">
        <item>0001</item>
        <item>0002</item>
        <item>0003</item>
        <item>0004</item>
        <item>0005</item>
        <item>0006</item>
        <item>0007</item>
        <item>0008</item>
    </string-array>

    <string-array name="lines">
        <item>Line1</item>
        <item>Line2</item>
        <item>Line3</item>
        <item>Line4</item>
        <item>Line5</item>
    </string-array>

    <string-array name="pens">
        <item>B01</item>
        <item>C01</item>
        <item>G02</item>
        <item>H09</item>
        <item>I0</item>
        <item>J06</item>
        <item>K04</item>
        <item>T07</item>

    </string-array>
    <string-array name="plummage_colors">
        <item>White</item>
        <item>Orange</item>
        <item>Black</item>
        <item>Brown</item>
        <item>Red</item>
        <item>Yellow</item>
    </string-array>

    <string-array name="plummage_pattern">
        <item>Plain</item>
        <item>Wild Type</item>
        <item>Molted</item>
        <item>Barred</item>
        <item>Laced</item>
    </string-array>

    <string-array name="hackle_color">
        <item>Yellow</item>
        <item>Brown</item>
        <item>Black</item>
        <item>Orange</item>
        <item>Red</item>
    </string-array>

    <string-array name="hackle_pattern">
        <item>Plain</item>
        <item>Barred</item>
        <item>Laced</item>
    </string-array>

    <string-array name="body_carriage">
        <item>Upright</item>
        <item>Slight Upright</item>
    </string-array>

    <string-array name="comb_type">
        <item>Single</item>
        <item>Pea</item>
        <item>Rose</item>
    </string-array>

    <string-array name="comb_color">
        <item>Red</item>
        <item>Pink</item>
        <item>Black</item>
    </string-array>

    <string-array name="earlobe_color">
        <item>White</item>
        <item>Red-White</item>
        <item>Red</item>
    </string-array>

    <string-array name="iris_color">
        <item>Red</item>
        <item>Brown</item>
        <item>Orange</item>
        <item>Yellow</item>
    </string-array>

    <string-array name="beak_color">
        <item>White</item>
        <item>Black</item>
        <item>Brown</item>
        <item>Yellow</item>
    </string-array>

    <string-array name="shank_color">
        <item>White</item>
        <item>Green</item>
        <item>Black</item>
        <item>Grey</item>
        <item>Yellow</item>
    </string-array>

    <string-array name="skin_color">
        <item>White</item>
        <item>Yellow</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>
