<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/add_pen"
        android:textColor="#000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/generation_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_margin="10dp"
        android:hint="Pen No."
        android:inputType="text"
        android:textSize="15sp" />

    <RadioGroup
        android:id="@+id/radio_group1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/generation_no"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/brooder" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/grower" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/layer" />
    </RadioGroup>

    <EditText
        android:id="@+id/capacity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_group1"
        android:layout_margin="10dp"
        android:hint="Capacity"
        android:inputType="number"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/capacity"
        android:gravity="end">

        <Button
            android:id="@+id/action_ok"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/capacity"
            android:layout_margin="15dp"
            android:background="@drawable/buttonstylepaprika"
            android:drawableLeft="@drawable/ic_add_black_24dp"
            android:text="Add"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>