<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="350dp"
      android:background="@drawable/gradientbackground"
      android:orientation="vertical"
      android:paddingBottom="10dp"
      android:paddingLeft="40dp"
      android:paddingRight="40dp"
      android:paddingTop="40dp">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="142dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/title"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/logo2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo4"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">

      <Button
          android:id="@+id/button"
          style="?android:attr/buttonBarButtonStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:layout_weight="1"
          android:background="@drawable/buttonstylepaprika"
          android:text="@string/learn"
          android:textColor="#fff" />

      <Button
          android:id="@+id/button2"
          style="?android:attr/buttonBarButtonStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:layout_weight="1"
          android:background="@drawable/buttonstyle2"
          android:text="@string/join"
          android:textColor="#fff" />
    </LinearLayout>

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="vertical"
      android:paddingBottom="40dp">

<!--    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_login"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick">

    </com.google.android.gms.common.SignInButton>-->
      <Button
          android:id="@+id/button3"
          android:layout_width="239dp"
          android:layout_height="52dp"
          android:background="@drawable/googlesignin"
          android:onClick="onButtonClick" />
  </LinearLayout>
</LinearLayout>