<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="285dp"
    android:background="#eeeeee"
    tools:context=".AddressFragment"
    android:layout_gravity="center_horizontal">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/address_layout1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_map_black_24dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/region" />

            <EditText
                android:id="@+id/profile_region"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="Enter your region"
                android:layout_marginLeft="10dp"
                android:inputType="text"
                android:textSize="14sp"
                android:background="@android:color/transparent"/>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/address_layout2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="75dp"
        android:layout_gravity="center_horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_terrain_black_24dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/province" />

            <EditText
                android:id="@+id/profile_province"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@android:color/transparent"
                android:hint="Enter your province"
                android:inputType="text"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/address_layout3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_location_city_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/town" />

            <EditText
                android:id="@+id/profile_town"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="Enter your town"
                android:layout_marginLeft="10dp"
                android:inputType="text"
                android:textSize="14sp"
                android:background="@android:color/transparent"/>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/address_layout4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="170dp"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_location_on_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/baranggay" />

            <EditText
                android:id="@+id/profile_barangay"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="Enter your barangay"
                android:layout_marginLeft="10dp"
                android:inputType="text"
                android:textSize="14sp"
                android:background="@android:color/transparent"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/address_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/turmeric"
        android:text="@string/submit"
        android:textColor="@color/white" />

</FrameLayout>