<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="285dp"
    android:background="#eeeeee"
    tools:context=".ContactsFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/address_layout1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_phone_black_24dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/phone" />

            <EditText
                android:id="@+id/profile_phone"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@android:color/transparent"
                android:hint="Enter your phone number"
                android:inputType="number"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/address_layout2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="75dp"
        android:layout_gravity="center_horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_terrain_black_24dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/email" />

            <EditText
                android:id="@+id/profile_email"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@android:color/transparent"
                android:hint="Enter your e-mail"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />

        </LinearLayout>



    </LinearLayout>



    <Button
        android:id="@+id/contacts_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/turmeric"
        android:text="@string/submit"
        android:textColor="@color/white" />

</FrameLayout>